syntax = "proto3";

package order;

import "google/protobuf/timestamp.proto";

option go_package = "/mypackage/pb";

message Delivery {
  string name = 1;
  string phone = 2;
  string zip = 3;
  string city = 4;
  string address = 5;
  string region = 6;
  string email = 7;
}

message Payment {
  string transaction = 1;
  string request_id = 2;
  string currency = 3;
  string provider = 4;
  int32 amount = 5;
  google.protobuf.Timestamp payment_dt = 6;
  string bank = 7;
  int32 delivery_cost = 8;
  int32 goods_total = 9;
  int32 custom_fee = 10;
}

message Item {
  int32 chrt_id = 1;
  string track_number = 2;
  float price = 3;
  string rid = 4;
  string name = 5;
  float sale = 6;
  string size = 7;
  float total_price = 8;
  int32 nm_id = 9;
  string brand = 10;
  int32 status = 11;
}

message Order {
  string TrackNumber = 1;
  string Entry = 2;
  string Locale = 3;
  string InternalSig = 4;
  string CustomerID = 5;
  string DeliveryService = 6;
  string ShardKey = 7;
  int32 SMID = 8;
  string OofShard = 9;
  google.protobuf.Timestamp DateCreated = 10;
  Delivery Delivery = 11;
  Payment Payment = 12;
  repeated Item Items = 13;
}
